--- a/chromium_src/BUILD.gn
+++ b/chromium_src/BUILD.gn
@@ -242,6 +242,8 @@ static_library("chrome") {
       "//chrome/renderer/extensions/extension_hooks_delegate.h",
       "//chrome/renderer/extensions/tabs_hooks_delegate.cc",
       "//chrome/renderer/extensions/tabs_hooks_delegate.h",
+      "//chrome/renderer/pepper/chrome_pdf_print_client.cc",
+      "//chrome/renderer/pepper/chrome_pdf_print_client.h",
     ]
   }
 }
